# exact_diagonalization_cpp

./: CG.h  CMakeLists.txt  CMakelists.txt  LICENSE  NLC.py  README.md  RELEASE_NOTES.md  ReadMe.md  TPQ.h  construct_ham.cpp  construct_ham.h  ed_run.cpp  ed_wrapper.cpp  helper.py  helper_non_kramers.py  lanczos.cpp  lanczos_cuda.cpp  lanczos_cuda.cu  plot.py  specific_heat_Pr2Zr2O7.txt
cmake/: performance_config.h.in  test_prefetch.cpp
configs/: 01_diagonalization_lanczos.cfg  02_diagonalization_davidson.cfg  03_diagonalization_arpack_advanced.cfg  04_diagonalization_gpu.cfg  05_tpq_microcanonical.cfg  06_tpq_canonical.cfg  07_ftlm.cfg  08_ltlm.cfg  09_hybrid_thermal.cfg  10_dssf_ground_state.cfg  11_dssf_finite_temperature.cfg  12_sssf_static_structure_factor.cfg  13_tpq_dssf_workflow.cfg  14_symmetrized_diagonalization.cfg  15_ed_dssf_mode.cfg
docs/: CONFIGURATION_REFERENCE.md  GPU_FTLM_OPTIMIZATION_ANALYSIS.md  GPU_FTLM_OVERHEAD_ANALYSIS.md  configuration.md  nlc_fit_user_manual.md
examples/: ed_config_example.txt  ed_config_fixed_sz.txt  gpu_hamiltonian_test.cpp
include/ed/core/: blas_lapack_wrapper.h  chunked_symmetry_builder.h  construct_ham.h  disk_streaming_symmetry.h  ed_config.h  ed_config_adapter.h  ed_logging.h  ed_wrapper.h  ed_wrapper_chunked.h  ed_wrapper_streaming.h  hdf5_io.h  hdf5_symmetry_io.h  streaming_symmetry.h  system_utils.h  thermal_types.h
include/ed/dmrg/: DESIGN.md  QUICKREF.md  dmrg_config.h  environ.h  idmrg.h  mpo.h  mps.h  tensor.h
include/ed/gpu/: cuda_raii.cuh  gpu_cg.cuh  gpu_dynamics.cuh  gpu_ed_wrapper.h  gpu_ftlm.cuh  gpu_lanczos.cuh  gpu_operator.cuh  gpu_tpq.cuh  kernel_config.h  mixed_precision.cuh
include/ed/solvers/: CG.h  TPQ.h  arpack.h  dynamics.h  ftlm.h  hybrid_thermal.h  lanczos.h  ltlm.h  observables.h  scalapack_diag.h
python/: pyproject.toml
python/edlib/: __init__.py  automorphism_finder.py  helper_cluster.py  helper_cluster_triangular.py  helper_cluster_triangular_triangle_based.py  helper_honeycomb.py  helper_honeycomb_BCAO.py  helper_kagome_bfg.py  helper_kagome_bfg_sqrt3.py  helper_kagome_bfg_v2.py  helper_non_kramers.py  helper_pyrochlore.py  helper_pyrochlore_super.py
script/: ftlm_workflow.sh
scripts/: animate_DSSF.py  calc_QFI_from_spectral.py  calc_thermodynamic_heatmaps.py  compare_all_dssf_methods.py  compare_dssf_methods.py  compute_bfg_order_parameters.py  demonstrate_automorphisms.py  h5inspect.py  parse_tpq.py  plot.py  plot_NdMgAl_heat_capacity.py  plot_bfg_scan_results.py  plot_bfg_single_jpm.py  plot_cv_H.py  plot_ftlm.py  plot_ftlm_clusters.py  plot_ftlm_thermal.py  plot_lattice_bonds.py  plot_nlce_snapshots.py  plot_nsf_sf_comparison.py  plot_spin_config.py  plot_sssf.py  plot_sssf_comparison.py  plot_static_response.py  plot_tpq.py  print_gamma_matrices.py  prune_NdMgAl_for_nlce.py  pyrochlore_mag_scan.py  run_all_methods_test.sh  run_three_body_increment.sh  test_gpu_vs_cpu_ftlm.py  test_spectral_consistency.py  test_spectrum_integral_kagome.sh  test_sssf_consistency.py  verify_spectrum_integral.py
src/: CG.cpp  CG.h  TPQ.cpp  TPQ.h  TPQ_DSSF.cpp  TPQ_MPI.h  TPQ_chunked.h  TPQ_cuda.cu  TPQ_cuda.cuh  TPQ_cuda.h  TPQ_cuda_utils.cu  TPQ_long.h  arpack.cpp  arpack.h  automorphim_finder.py  automorphism_finder.py  chunked_complex_vector.h  compute_observables.cpp  construct_ham.h  construct_ham_cuda.h  dynamics.cpp  dynamics.h  ed_config.cpp  ed_config.h  ed_config_adapter.h  ed_main.cpp  ed_run.cpp  ed_wrapper.h  finite_temperature_lanczos.h  gpu_hamiltonian.cu  gpu_hamiltonian.cuh  gpu_utils.cu  gpu_utils.cuh  gpu_vector.cuh  lanczos.cpp  lanczos.h  lanczos_cuda.h  lanczos_gpu.cu  lanczos_gpu.cuh  observables.cpp  (+7 more)
src/apps/: TPQ_DSSF.cpp  compute_bfg_order_parameters.cpp  compute_bfg_order_parameters_gpu.cu  ed_main.cpp
src/core/: TPQ_DSSF.cpp  automorphism_finder.py  construct_ham.h  ed_config.cpp  ed_config.h  ed_config_adapter.h  ed_main.cpp  ed_wrapper.h  ed_wrapper_fixed_sz_symmetry.h  ed_wrapper_streaming.h  hdf5_io.h  hdf5_io.py  streaming_symmetry.h  thermal_types.h
src/cpu_solvers/: CG.cpp  CG.h  TPQ.cpp  TPQ.h  arpack.cpp  arpack.h  dynamics.cpp  dynamics.h  ftlm.cpp  ftlm.h  hybrid_thermal.cpp  hybrid_thermal.h  lanczos.cpp  lanczos.h  ltlm.cpp  ltlm.h  observables.cpp  observables.h
src/gpu/: bit_operations.cuh  gpu_cg.cu  gpu_dynamics.cu  gpu_ed_wrapper.cu  gpu_ed_wrapper.h  gpu_fixed_sz_operator.cu  gpu_ftlm.cu  gpu_ftlm.cuh  gpu_kernels.cu  gpu_lanczos.cu  gpu_lanczos.cuh  gpu_operator.cu  gpu_operator.cuh  gpu_operator_conversion.cpp  gpu_tpq.cu  gpu_tpq.cuh
src/io/: basis_vector_storage.cpp  basis_vector_storage.h
src/solvers/cpu/: CG.cpp  TPQ.cpp  arpack.cpp  dynamics.cpp  ftlm.cpp  hybrid_thermal.cpp  lanczos.cpp  ltlm.cpp  observables.cpp  scalapack_diag.cpp
src/solvers/gpu/: gpu_block_krylov_schur.cu  gpu_block_lanczos.cu  gpu_cg.cu  gpu_dynamics.cu  gpu_ed_wrapper.cu  gpu_fixed_sz_operator.cu  gpu_ftlm.cu  gpu_full_diag.cu  gpu_kernels.cu  gpu_krylov_schur.cu  gpu_lanczos.cu  gpu_operator.cu  gpu_operator_conversion.cpp  gpu_tpq.cu  (+2 more)
tests/: test_dmrg.cpp
util/: CACHE_IMPLEMENTATION_SUMMARY.md  CACHE_USAGE.md  CHANGES_SUMMARY.md  DATA_FLOW_DIAGRAM.txt  FTLM_PIPELINE_SUMMARY.md  NLC.py  NLC.sh  NLC_sum.py  NLC_sum_TPQ.py  NLC_sum_ftlm.py  PROCESSING_MODES_README.md  QUICK_REFERENCE.txt  QUICK_REFERENCE_animate_DSSF.md  README_CARTESIAN_IMPLEMENTATION.md  README_FTLM_PLOTTING.md  README_animate_DSSF_updated.md  SUMMARY_animate_DSSF.md  VISUAL_GUIDE_animate_DSSF.md  analyze_ftlm.py  animate_DSSF.py  animate_DSSF_cartesian.py  animate_DSSF_updated.py  calc_QFI.py  calc_QFI_from_spectral.py  combine_channels.py  combine_modes.py  compare_nlce_pipelines.py  generate_heisenberg_chain.py  generate_pyrochlore_clusters.py  generate_pyrochlore_clusters_backup.py  helper_cluster.py  helper_honeycomb.py  helper_honeycomb_c3.py  helper_honeycomb_c3_BCAO.py  helper_kagome_bfg.py  helper_pyrochlore.py  helper_pyrochlore_super.py  nlc_convergence.py  nlc_fit.py  nlc_fit_ftlm.py  (+12 more)
util/depreciated/: animate_DSSF.py  animate_DSSF_cartesian.py  animate_DSSF_updated.py
(+161 files in other folders)
